--- a/project/style.css
+++ b/project/style.css
@@ -1,10 +1,12 @@
 *{
 	margin:0px;
 	padding:0px;
+	
 
 }
 body{
 	background-color: rgb(25, 25, 34);
+   font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 #first{
 	width: 100%;
@@ -388,11 +390,14 @@ border-radius: 20px;
 	margin-top:100px ;
 	/* border: 4px solid red; */
 	padding-top: 20px;
+	cursor: pointer;
 	
 	
- }.bottom>img{
+	
+ }.bottom img{
 	border-radius: 10px;
-	
+	box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+	border:2px solid white
  }
 
  .first_li a{
