--- a/project/care.css
+++ b/project/care.css
@@ -11,9 +11,9 @@
 	justify-content: center;
 	list-style: none;	
 	margin: 15px;
-	margin-right: 20px;
-	padding-right: 20px;
-	font-size: 25px;
+	margin-right: 30px;
+	padding-right: 10px;
+	font-size: 20px;
 	
 	}
 	#navbar>ul>a{
@@ -28,6 +28,10 @@
 	width:20%;
 	margin:5px;
 	
+	}
+	select{
+		padding:3px 10px 3px 10px;
+		margin-left: 20px;
 	}
 	#first{
 		
